# ScholarGraph

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  app_ui.py  main.py  parse_mineru.py  pyproject.toml  start.py
app/agents/: agents.py
app/api/: api.py
app/core/: callbacks.py  chat.py  dependencies.py  document_loader.py  graph.py  start.py
app/gradio/: app_ui.py
app/models/: model_invoke.py
app/orchestration/: graph.py  nodes.py  states.py
app/tools/: tools.py
app/utils/: prompts.py
src/: __init__.py  chat.py  document_loader.py  graph.py  model_invoke.py
