[project]
name = "scholargraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "gradio>=6.17.3",
    "langchain>=1.3.4",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "llama-parse>=0.6.94",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "tenacity>=9.1.4",
    "unstructured-inference>=1.6.13",
    "unstructured[all-docs,local-inference]>=0.23.1",
    "uvicorn>=0.49.0",
]

